<resources>
    <string name="app_name" translatable="false">Checkup</string>
    <string name="generic_module_name" translatable="false">Generic Module</string>
    <string name="generic_test_title" translatable="false">A generic test</string>
    <string name="generic_test_description" translatable="false">A fictive test to fill blanks.</string>
    <string name="generic_test_instructions" translatable="false">You do not have anything to do, because this is not a real test. You really should have something more descriptive and clear for the user here.</string>
    <string name="test_failed" translatable="false">Test failed</string>
    <string name="test_passed" translatable="false">Test passed</string>
    <string name="tests_for">Select a test for the</string>
    <string name="not_available">N/A</string>
    <string name="state" translatable="false">State:</string>
    <string name="not_triggered" translatable="false">Not triggered.</string>
    <string name="start_test" translatable="false">Start Test</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="section_instructions">Instructions:</string>
    <string name="action_begin_test">Begin test</string>
    <string name="action_test_in_progress">Test in progress&#8230;</string>
    <string name="action_cancel_test">Cancel</string>
    <string name="display_module_name" translatable="false">Display module</string>
    <string name="display_module_description" translatable="false">The display module houses the LCD screen and the touch screen digitizer.</string>
    <string name="lcd_test_title">Screen (LCD)</string>
    <string name="lcd_test_summary">Display base colors and common patterns.</string>
    <string name="lcd_test_description">Display base colors and common patterns.</string>
    <string name="lcd_test_instructions">Press start and tap the screen to cycle through the steps.</string>
    <string name="digitizer_test_title" translatable="false">Touch screen digitizer</string>
    <string name="digitizer_test_description" translatable="false">This test checks if the touch sensors are working correctly. Drag your finger(s) along the pattern to proceed.</string>
    <string name="freedraw_test_title">Free drawing</string>
    <string name="freedraw_test_summary">Draw freely on the screen.</string>
    <string name="freedraw_test_description">Draw freely on the screen.</string>
    <string name="freedraw_test_instructions">Use your finger to draw freely on the canvas. While on the canvas, swipe from the bottom of the screen towards the top to make the back button appear.</string>
    <string name="battery_module_name" translatable="false">Battery</string>
    <string name="battery_module_description" translatable="false">The battery provides the juice to keep your Fairphone up and running.</string>
    <string name="battery_test_title" translatable="false">Battery</string>
    <string name="battery_test_description" translatable="false">This test checks if the battery is working. Press \'Start test\' to view the battery statistics.</string>
    <string name="battery_test_finish_question" translatable="false">Battery statistics are displayed. Does it look OK?</string>
    <string name="battery_status" translatable="false">Status:</string>
    <string name="battery_status_unknown" translatable="false">Unknown</string>
    <string name="battery_status_charging" translatable="false">Charging</string>
    <string name="battery_status_discharging" translatable="false">Discharging</string>
    <string name="battery_status_not_charging" translatable="false">Not charging</string>
    <string name="battery_status_full" translatable="false">Unknown</string>
    <string name="battery_plugged" translatable="false">Plugged:</string>
    <string name="battery_plugged_ac" translatable="false">AC</string>
    <string name="battery_plugged_usb" translatable="false">USB</string>
    <string name="battery_plugged_wireless" translatable="false">Wireless</string>
    <string name="battery_level" translatable="false">Level:</string>
    <string name="battery_level_unit" translatable="false">%</string>
    <string name="battery_temperature" translatable="false">Temperature:</string>
    <string name="battery_temperature_unit" translatable="false">°C</string>
    <string name="battery_voltage" translatable="false">Voltage:</string>
    <string name="battery_voltage_unit" translatable="false">V</string>
    <string name="battery_health" translatable="false">Health:</string>
    <string name="battery_health_unkown" translatable="false">Unknown</string>
    <string name="battery_health_good" translatable="false">Good</string>
    <string name="battery_health_overheat" translatable="false">Overheat</string>
    <string name="battery_health_dead" translatable="false">Dead</string>
    <string name="battery_health_over_voltage" translatable="false">Over voltage</string>
    <string name="battery_health_unspecified_failure" translatable="false">Unspecified failure</string>
    <string name="battery_health_cold" translatable="false">Cold</string>
    <string name="camera_module_name" translatable="false">Camera</string>
    <string name="camera_module_description" translatable="false">The camera module contains the rear-facing camera and the flashlight.</string>
    <string name="camera_test_title" translatable="false">Rear camera</string>
    <string name="camera_test_description" translatable="false">This test checks if the camera is working. It will display a preview of the camera picture. If you see the preview, then the camera is working correctly.</string>
    <string name="flash_test_title" translatable="false">Flashlight</string>
    <string name="flash_test_description" translatable="false">This test checks if the flashlight is working. Press \'Start test\' and see if the flashlight turns on.</string>
    <string name="flash_test_finish_question" translatable="false">Turn your Fairphone around, the flashlight should be on. Is the flashlight on?</string>
    <string name="transceiver_module_name" translatable="false">Core</string>
    <string name="transceiver_module_description" translatable="false">This module contains the modem, SIM-card slots, GPS and more.</string>
    <string name="dualsim_test_title" translatable="false">SIM-card slots</string>
    <string name="dualsim_test_description" translatable="false">This test will display the SIM-card status. Check if the displayed information is correct.</string>
    <string name="dualsim_test_finish_question" translatable="false">Is the SIM-card info correct?</string>
    <string name="dualsim_card_1" translatable="false">Card 1 state:</string>
    <string name="dualsim_card_2" translatable="false">Card 2 state:</string>
    <string name="dualsim_card_presence" translatable="false">Present</string>
    <string name="dualsim_card_present_na" translatable="false">N/A</string>
    <string name="dualsim_card_present_yes" translatable="false">Yes</string>
    <string name="dualsim_card_present_no" translatable="false">No card present</string>
    <string name="dualsim_card_carrier" translatable="false">Carrier</string>
    <string name="dualsim_settings_text" translatable="false">Go to \'Settings -&gt; SIM cards\' to change your SIM card settings.</string>
    <string name="sim_state_unkown" translatable="false">Unknown</string>
    <string name="sim_state_absent" translatable="false">No SIM-card is entered in the Fairphone</string>
    <string name="sim_state_pin_required" translatable="false">Locked: requires a SIM-PIN code to unlock</string>
    <string name="sim_state_puk_required" translatable="false">Locked: requires a SIM-PUK code to unlock</string>
    <string name="sim_state_network_locked" translatable="false">Locked: requires a network PIN code to unlock</string>
    <string name="sim_state_ready" translatable="false">Ready</string>
    <string name="sim_state_not_ready" translatable="false">SIM-card is not ready</string>
    <string name="sim_state_perm_disabled" translatable="false">SIM-card error: Permanently disabled</string>
    <string name="sim_state_card_io_error" translatable="false">SIM-card error: Present, but faulty</string>
    <string name="microsd_test_title" translatable="false">microSD slot</string>
    <string name="microsd_test_description" translatable="false">This test checks if the microSD slot is working properly. Make sure a microSD card is plugged in, then press \'Start test\'.</string>
    <string name="microsd_test_finish_question" translatable="false">You should see the SD card status. Is the info correct?</string>
    <string name="microsd_state" translatable="false">State:</string>
    <string name="microsd_total_size" translatable="false">Total size:</string>
    <string name="microsd_available_space" translatable="false">Available space:</string>
    <string name="microsd_mounted" translatable="false">Mounted</string>
    <string name="microsd_unknown" translatable="false">Unknown</string>
    <string name="microsd_filesystem" translatable="false">Filesystem:</string>
    <string name="accelerometer_test_title" translatable="false">Accelerometer</string>
    <string name="accelerometer_test_description" translatable="false">This test checks if the accelerometer is working properly. Press \'Start test\' and tilt your Fairphone in all directions.</string>
    <string name="accelerometer_test_finish_question" translatable="false">You should see the X, Y and Z values change when you tilt your Fairphone. Are the values changing?</string>
    <string name="accelerometer_x_axis" translatable="false">X:</string>
    <string name="accelerometer_y_axis" translatable="false">Y:</string>
    <string name="accelerometer_z_axis" translatable="false">Z:</string>
    <string name="acceleration_unit" translatable="false"> m/s²</string>
    <string name="accelerometer_header" translatable="false">Acceleration force (including gravity)</string>
    <string name="magnetometer_test_title" translatable="false">Magnetometer</string>
    <string name="magnetometer_test_description" translatable="false">This test checks if the magnetometer is working properly. Press \'Start test\' and turn your Fairphone around.</string>
    <string name="magnetometer_test_finish_question" translatable="false">You should see the heading value change when you turn your Fairphone around. Is the value changing?</string>
    <string name="magnetometer_x_axis" translatable="false">X:</string>
    <string name="magnetometer_y_axis" translatable="false">Y:</string>
    <string name="magnetometer_z_axis" translatable="false">Z:</string>
    <string name="magnetometer_unit" translatable="false"> μT</string>
    <string name="magnetometer_header" translatable="false">Geomagnetic field strength along axis</string>
    <string name="gyroscope_test_title" translatable="false">Gyroscope</string>
    <string name="searching" translatable="false">Searching…</string>
    <string name="satellites" translatable="false">Satellites:</string>
    <string name="latitude" translatable="false">Latitude:</string>
    <string name="longitude" translatable="false">Longitude:</string>
    <string name="altitude" translatable="false">Altitude:</string>
    <string name="speed" translatable="false">Speed:</string>
    <string name="bearing" translatable="false">Bearing:</string>
    <string name="accuracy" translatable="false">Accuracy:</string>
    <string name="wifi_connected_title">Wi-Fi enabled - connected</string>
    <string name="wifi_ssid">SSID:</string>
    <string name="wifi_bssid">BSSID:</string>
    <string name="wifi_linkspeed">Link speed:</string>
    <string name="wifi_signal_strength">Signal strength:</string>
    <string name="wifi_mac_address">MAC address:</string>
    <string name="wifi_frequency">Frequency:</string>
    <string name="wifi_encryption">Encryption:</string>
    <string name="wifi_ip_address">IP address:</string>
</resources>