<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_simple_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".tests.SimpleTest">

    <TextView
        android:id="@+id/test_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_test_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/test_instructions_label"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_description"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/section_instructions" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_instructions_label">

        <TextView
            android:id="@+id/test_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_test_instructions"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </ScrollView>

    <Button
        android:id="@+id/test_action"
        style="?android:attr/textAppearanceInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/primary"
        android:text="@string/start_test" />

</RelativeLayout>
