<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/microsd_state"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:text="@string/microsd_state"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_available"
        android:id="@+id/microsd_state_value"
        android:layout_alignTop="@id/microsd_state"
        android:layout_toEndOf="@id/microsd_state"/>

    <TextView
        android:id="@+id/microsd_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microsd_total_size"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/microsd_state"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_available"
        android:id="@+id/microsd_size_value"
        android:layout_alignTop="@id/microsd_size"
        android:layout_toEndOf="@id/microsd_size" />

    <TextView
        android:id="@+id/microsd_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microsd_available_space"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/microsd_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_available"
        android:id="@+id/microsd_available_value"
        android:layout_alignTop="@id/microsd_available"
        android:layout_toEndOf="@id/microsd_available" />

</RelativeLayout>
