<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_content_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/tile_padding">

    <TextView
        android:id="@+id/wifi_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_connected_title"
        android:textAppearance="?android:textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/wifi_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_title">

        <TextView
            android:id="@+id/wifi_mac_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/simple_space"
            android:text="@string/wifi_mac_address"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/wifi_mac_address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/wifi_mac_address_label"
            android:layout_toEndOf="@id/wifi_mac_address_label"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/wifi_connectivity_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifi_mac_address_label">

            <TextView
                android:id="@+id/wifi_ssid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_ssid"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_ssid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_ssid_label"
                android:layout_toEndOf="@id/wifi_ssid_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_bssid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_ssid_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_bssid"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_bssid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_bssid_label"
                android:layout_toEndOf="@id/wifi_bssid_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_link_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_bssid_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_linkspeed"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_link_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_link_speed_label"
                android:layout_toEndOf="@id/wifi_link_speed_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_signal_strength_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_link_speed_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_signal_strength"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_strength_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_signal_strength_label"
                android:layout_toEndOf="@id/wifi_signal_strength_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_encryption_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_signal_strength_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_encryption"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_encryption_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_encryption_label"
                android:layout_toEndOf="@id/wifi_encryption_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_frequency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_encryption_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_frequency"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_frequency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/wifi_frequency_label"
                android:layout_toEndOf="@id/wifi_frequency_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_ip_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_frequency_label"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_ip_address"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_ip_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wifi_ip_address_label"
                android:layout_toEndOf="@id/wifi_ip_address_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_dns_servers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_ip_address_value"
                android:layout_marginEnd="@dimen/simple_space"
                android:text="@string/wifi_dns_servers"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/wifi_dns_servers_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wifi_dns_servers_label"
                android:layout_toEndOf="@id/wifi_dns_servers_label"
                android:text="@string/not_available"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
